Updated default color pallet

--- a/TnTComponents/Styles/Common/_default_colors_tokens.scss
+++ b/TnTComponents/Styles/Common/_default_colors_tokens.scss
@@ -1,148 +1,165 @@
-﻿$tnt-default-color-source: #6750A4;
-
-/* primary */
+﻿$tnt-default-color-source: #5C2D91;
+  /* primary */
 $tnt-color-primary0: #000000;
-$tnt-color-primary10: #21005D;
-$tnt-color-primary20: #381E72;
-$tnt-color-primary30: #4F378B;
-$tnt-color-primary40: #6750A4;
-$tnt-color-primary50: #7F67BE;
-$tnt-color-primary60: #9A82DB;
-$tnt-color-primary70: #B69DF8;
-$tnt-color-primary80: #D0BCFF;
-$tnt-color-primary90: #EADDFF;
-$tnt-color-primary95: #F6EDFF;
-$tnt-color-primary99: #FFFBFE;
-$tnt-color-primary100: #FFFFFF;
-/* secondary */
+$tnt-color-primary10: #2a0053;
+$tnt-color-primary20: #440f79;
+$tnt-color-primary25: #502085;
+$tnt-color-primary30: #5c2d91;
+$tnt-color-primary35: #693a9e;
+$tnt-color-primary40: #7547ab;
+$tnt-color-primary50: #8f61c6;
+$tnt-color-primary60: #aa7be2;
+$tnt-color-primary70: #c695ff;
+$tnt-color-primary80: #dab9ff;
+$tnt-color-primary90: #efdbff;
+$tnt-color-primary95: #f9edff;
+$tnt-color-primary98: #fff7ff;
+$tnt-color-primary99: #fffbff;
+$tnt-color-primary100: #ffffff;
+  /* secondary */
 $tnt-color-secondary0: #000000;
-$tnt-color-secondary10: #1D192B;
-$tnt-color-secondary20: #332D41;
-$tnt-color-secondary30: #4A4458;
-$tnt-color-secondary40: #625B71;
-$tnt-color-secondary50: #7A7289;
-$tnt-color-secondary60: #958DA5;
-$tnt-color-secondary70: #B0A7C0;
-$tnt-color-secondary80: #CCC2DC;
-$tnt-color-secondary90: #E8DEF8;
-$tnt-color-secondary95: #F6EDFF;
-$tnt-color-secondary99: #FFFBFE;
-$tnt-color-secondary100: #FFFFFF;
-/* tertiary */
+$tnt-color-secondary10: #001d32;
+$tnt-color-secondary20: #003352;
+$tnt-color-secondary25: #003f63;
+$tnt-color-secondary30: #004a75;
+$tnt-color-secondary35: #005787;
+$tnt-color-secondary40: #00639a;
+$tnt-color-secondary50: #007dc0;
+$tnt-color-secondary60: #3297de;
+$tnt-color-secondary70: #56b2fb;
+$tnt-color-secondary80: #95ccff;
+$tnt-color-secondary90: #cde5ff;
+$tnt-color-secondary95: #e8f2ff;
+$tnt-color-secondary98: #f7f9ff;
+$tnt-color-secondary99: #fcfcff;
+$tnt-color-secondary100: #ffffff;
+  /* tertiary */
 $tnt-color-tertiary0: #000000;
-$tnt-color-tertiary10: #31111D;
-$tnt-color-tertiary20: #492532;
-$tnt-color-tertiary30: #633B48;
-$tnt-color-tertiary40: #7D5260;
-$tnt-color-tertiary50: #986977;
-$tnt-color-tertiary60: #B58392;
-$tnt-color-tertiary70: #D29DAC;
-$tnt-color-tertiary80: #EFB8C8;
-$tnt-color-tertiary90: #FFD8E4;
-$tnt-color-tertiary95: #FFECF1;
-$tnt-color-tertiary99: #FFFBFA;
-$tnt-color-tertiary100: #FFFFFF;
-/* error */
-$tnt-color-error0: #000000;
-$tnt-color-error10: #410E0B;
-$tnt-color-error20: #601410;
-$tnt-color-error30: #8C1D18;
-$tnt-color-error40: #B3261E;
-$tnt-color-error50: #DC362E;
-$tnt-color-error60: #E46962;
-$tnt-color-error70: #EC928E;
-$tnt-color-error80: #F2B8B5;
-$tnt-color-error90: #F9DEDC;
-$tnt-color-error95: #FCEEEE;
-$tnt-color-error99: #FFFBF9;
-$tnt-color-error100: #FFFFFF;
-/* neutral */
+$tnt-color-tertiary10: #231b00;
+$tnt-color-tertiary20: #3c2f00;
+$tnt-color-tertiary25: #493a00;
+$tnt-color-tertiary30: #574500;
+$tnt-color-tertiary35: #655000;
+$tnt-color-tertiary40: #735c00;
+$tnt-color-tertiary50: #907400;
+$tnt-color-tertiary60: #af8d00;
+$tnt-color-tertiary70: #cfa700;
+$tnt-color-tertiary80: #eec215;
+$tnt-color-tertiary90: #ffe086;
+$tnt-color-tertiary95: #fff0cb;
+$tnt-color-tertiary98: #fff8f0;
+$tnt-color-tertiary99: #fffbff;
+$tnt-color-tertiary100: #ffffff;
+  /* neutral */
 $tnt-color-neutral0: #000000;
-$tnt-color-neutral10: #1C1B1F;
-$tnt-color-neutral20: #313033;
-$tnt-color-neutral30: #484649;
-$tnt-color-neutral40: #605D62;
-$tnt-color-neutral50: #787579;
-$tnt-color-neutral60: #939094;
-$tnt-color-neutral70: #AEAAAE;
-$tnt-color-neutral80: #C9C5CA;
-$tnt-color-neutral90: #E6E1E5;
-$tnt-color-neutral95: #F4EFF4;
-$tnt-color-neutral99: #FFFBFE;
-$tnt-color-neutral100: #FFFFFF;
-/* neutral-variant */
+$tnt-color-neutral10: #001f25;
+$tnt-color-neutral20: #00363f;
+$tnt-color-neutral25: #00424d;
+$tnt-color-neutral30: #004e5b;
+$tnt-color-neutral35: #005b69;
+$tnt-color-neutral40: #006878;
+$tnt-color-neutral50: #008396;
+$tnt-color-neutral60: #009fb6;
+$tnt-color-neutral70: #29bbd5;
+$tnt-color-neutral80: #53d7f1;
+$tnt-color-neutral90: #a6eeff;
+$tnt-color-neutral95: #d6f6ff;
+$tnt-color-neutral98: #effbff;
+$tnt-color-neutral99: #f8fdff;
+$tnt-color-neutral100: #ffffff;
+  /* neutral-variant */
 $tnt-color-neutral-variant0: #000000;
-$tnt-color-neutral-variant10: #1D1A22;
-$tnt-color-neutral-variant20: #322F37;
-$tnt-color-neutral-variant30: #49454F;
-$tnt-color-neutral-variant40: #605D66;
-$tnt-color-neutral-variant50: #79747E;
-$tnt-color-neutral-variant60: #938F99;
-$tnt-color-neutral-variant70: #AEA9B4;
-$tnt-color-neutral-variant80: #CAC4D0;
-$tnt-color-neutral-variant90: #E7E0EC;
-$tnt-color-neutral-variant95: #F5EEFA;
-$tnt-color-neutral-variant99: #FFFBFE;
-$tnt-color-neutral-variant100: #FFFFFF;
-/* light */
-$tnt-color-primary-light: #6750A4;
-$tnt-color-on-primary-light: #FFFFFF;
-$tnt-color-primary-container-light: #EADDFF;
-$tnt-color-on-primary-container-light: #21005D;
-$tnt-color-secondary-light: #625B71;
-$tnt-color-on-secondary-light: #FFFFFF;
-$tnt-color-secondary-container-light: #E8DEF8;
-$tnt-color-on-secondary-container-light: #1D192B;
-$tnt-color-tertiary-light: #7D5260;
-$tnt-color-on-tertiary-light: #FFFFFF;
-$tnt-color-tertiary-container-light: #FFD8E4;
-$tnt-color-on-tertiary-container-light: #31111D;
-$tnt-color-error-light: #B3261E;
-$tnt-color-on-error-light: #FFFFFF;
-$tnt-color-error-container-light: #F9DEDC;
-$tnt-color-on-error-container-light: #410E0B;
-$tnt-color-outline-light: #79747E;
-$tnt-color-background-light: #FFFBFE;
-$tnt-color-on-background-light: #1C1B1F;
-$tnt-color-surface-light: #FFFBFE;
-$tnt-color-on-surface-light: #1C1B1F;
-$tnt-color-surface-variant-light: #E7E0EC;
-$tnt-color-on-surface-variant-light: #49454F;
-$tnt-color-inverse-surface-light: #313033;
-$tnt-color-inverse-on-surface-light: #F4EFF4;
-$tnt-color-inverse-primary-light: #D0BCFF;
+$tnt-color-neutral-variant10: #1e1a22;
+$tnt-color-neutral-variant20: #332f37;
+$tnt-color-neutral-variant25: #3e3a42;
+$tnt-color-neutral-variant30: #4a454e;
+$tnt-color-neutral-variant35: #56505a;
+$tnt-color-neutral-variant40: #625c66;
+$tnt-color-neutral-variant50: #7b757f;
+$tnt-color-neutral-variant60: #958e98;
+$tnt-color-neutral-variant70: #b0a9b3;
+$tnt-color-neutral-variant80: #ccc4cf;
+$tnt-color-neutral-variant90: #e8e0eb;
+$tnt-color-neutral-variant95: #f7eef9;
+$tnt-color-neutral-variant98: #fff7ff;
+$tnt-color-neutral-variant99: #fffbff;
+$tnt-color-neutral-variant100: #ffffff;
+  /* error */
+$tnt-color-error0: #000000;
+$tnt-color-error10: #410002;
+$tnt-color-error20: #690005;
+$tnt-color-error25: #7e0007;
+$tnt-color-error30: #93000a;
+$tnt-color-error35: #a80710;
+$tnt-color-error40: #ba1a1a;
+$tnt-color-error50: #de3730;
+$tnt-color-error60: #ff5449;
+$tnt-color-error70: #ff897d;
+$tnt-color-error80: #ffb4ab;
+$tnt-color-error90: #ffdad6;
+$tnt-color-error95: #ffedea;
+$tnt-color-error98: #fff8f7;
+$tnt-color-error99: #fffbff;
+$tnt-color-error100: #ffffff;
+  /* light */
+$tnt-color-primary-light: #7547ab;
+$tnt-color-on-primary-light: #ffffff;
+$tnt-color-primary-container-light: #efdbff;
+$tnt-color-on-primary-container-light: #2a0053;
+$tnt-color-secondary-light: #00639a;
+$tnt-color-on-secondary-light: #ffffff;
+$tnt-color-secondary-container-light: #cde5ff;
+$tnt-color-on-secondary-container-light: #001d32;
+$tnt-color-tertiary-light: #735c00;
+$tnt-color-on-tertiary-light: #ffffff;
+$tnt-color-tertiary-container-light: #ffe086;
+$tnt-color-on-tertiary-container-light: #231b00;
+$tnt-color-error-light: #ba1a1a;
+$tnt-color-error-container-light: #ffdad6;
+$tnt-color-on-error-light: #ffffff;
+$tnt-color-on-error-container-light: #410002;
+$tnt-color-background-light: #f8fdff;
+$tnt-color-on-background-light: #001f25;
+$tnt-color-surface-light: #f8fdff;
+$tnt-color-on-surface-light: #001f25;
+$tnt-color-surface-variant-light: #e8e0eb;
+$tnt-color-on-surface-variant-light: #4a454e;
+$tnt-color-outline-light: #7b757f;
+$tnt-color-inverse-on-surface-light: #d6f6ff;
+$tnt-color-inverse-surface-light: #00363f;
+$tnt-color-inverse-primary-light: #dab9ff;
 $tnt-color-shadow-light: #00000022;
-$tnt-color-surface-tint-light: #6750A4;
-$tnt-color-outline-variant-light: #CAC4D0;
+$tnt-color-surface-tint-light: #7547ab;
+$tnt-color-outline-variant-light: #ccc4cf;
 $tnt-color-scrim-light: #000000;
-/* dark */
-$tnt-color-primary-dark: #D0BCFF;
-$tnt-color-on-primary-dark: #381E72;
-$tnt-color-primary-container-dark: #4F378B;
-$tnt-color-on-primary-container-dark: #EADDFF;
-$tnt-color-secondary-dark: #CCC2DC;
-$tnt-color-on-secondary-dark: #332D41;
-$tnt-color-secondary-container-dark: #4A4458;
-$tnt-color-on-secondary-container-dark: #E8DEF8;
-$tnt-color-tertiary-dark: #EFB8C8;
-$tnt-color-on-tertiary-dark: #492532;
-$tnt-color-tertiary-container-dark: #633B48;
-$tnt-color-on-tertiary-container-dark: #FFD8E4;
-$tnt-color-error-dark: #F2B8B5;
-$tnt-color-on-error-dark: #601410;
-$tnt-color-error-container-dark: #8C1D18;
-$tnt-color-on-error-container-dark: #F9DEDC;
-$tnt-color-outline-dark: #938F99;
-$tnt-color-background-dark: #1C1B1F;
-$tnt-color-on-background-dark: #E6E1E5;
-$tnt-color-surface-dark: #1C1B1F;
-$tnt-color-on-surface-dark: #E6E1E5;
-$tnt-color-surface-variant-dark: #49454F;
-$tnt-color-on-surface-variant-dark: #CAC4D0;
-$tnt-color-inverse-surface-dark: #E6E1E5;
-$tnt-color-inverse-on-surface-dark: #313033;
-$tnt-color-inverse-primary-dark: #6750A4;
+  /* dark */
+$tnt-color-primary-dark: #dab9ff;
+$tnt-color-on-primary-dark: #440f79;
+$tnt-color-primary-container-dark: #5c2d91;
+$tnt-color-on-primary-container-dark: #efdbff;
+$tnt-color-secondary-dark: #95ccff;
+$tnt-color-on-secondary-dark: #003352;
+$tnt-color-secondary-container-dark: #004a75;
+$tnt-color-on-secondary-container-dark: #cde5ff;
+$tnt-color-tertiary-dark: #eec215;
+$tnt-color-on-tertiary-dark: #3c2f00;
+$tnt-color-tertiary-container-dark: #574500;
+$tnt-color-on-tertiary-container-dark: #ffe086;
+$tnt-color-error-dark: #ffb4ab;
+$tnt-color-error-container-dark: #93000a;
+$tnt-color-on-error-dark: #690005;
+$tnt-color-on-error-container-dark: #ffdad6;
+$tnt-color-background-dark: #001f25;
+$tnt-color-on-background-dark: #a6eeff;
+$tnt-color-surface-dark: #001f25;
+$tnt-color-on-surface-dark: #a6eeff;
+$tnt-color-surface-variant-dark: #4a454e;
+$tnt-color-on-surface-variant-dark: #ccc4cf;
+$tnt-color-outline-dark: #958e98;
+$tnt-color-inverse-on-surface-dark: #001f25;
+$tnt-color-inverse-surface-dark: #a6eeff;
+$tnt-color-inverse-primary-dark: #7547ab;
 $tnt-color-shadow-dark: #FFFFFF66;
-$tnt-color-surface-tint-dark: #D0BCFF;
-$tnt-color-outline-variant-dark: #49454F;
+$tnt-color-surface-tint-dark: #dab9ff;
+$tnt-color-outline-variant-dark: #4a454e;
 $tnt-color-scrim-dark: #000000;
