--- a/TnTComponents/Styles/Components/_card.scss
+++ b/TnTComponents/Styles/Components/_card.scss
@@ -1,16 +1,4 @@
-﻿.tnt-card[theme=default] {
-
-    &.flat {
-        background-color: $tnt-color-surface-variant;
-    }
-
-    &.outlined {
-        border-color: $tnt-color-outline;
-    }
-}
-
-
-.tnt-card {
+﻿.tnt-card {
     padding: 1rem;
     width: -moz-fit-content;
     width: -moz-fit-content;
