--- a/TnTComponents/Styles/Components/_header.scss
+++ b/TnTComponents/Styles/Components/_header.scss
@@ -1,9 +1,4 @@
-﻿.tnt-header[theme=default] {
-    background-color: $tnt-color-primary;
-    color: $tnt-color-on-primary;
-}
-
-.tnt-header {
+﻿.tnt-header {
     min-height: 2.5rem;
     align-items: center;
     overflow-x: hidden;
