--- a/TnTComponents/Styles/Components/forms/_datetimepicker.scss
+++ b/TnTComponents/Styles/Components/forms/_datetimepicker.scss
@@ -1,92 +1,4 @@
-﻿@use "sass:color";
-
-.tnt-form-field[theme=default].date-picker {
-    .tnt-date-time-picker {
-        background-color: $tnt-color-primary-container;
-
-        i {
-            color: $tnt-color-on-primary-container;
-
-            &.disabled {
-                color: getDisableColor($tnt-color-on-primary-container);
-
-                &:hover {
-                    background-color: transparent;
-                }
-
-                &:active {
-                    background-color: transparent;
-                }
-            }
-        }
-
-        .tnt-input-field-label {
-            background-color: $tnt-color-primary-container;
-        }
-
-        .tnt-year-picker.outlined, .tnt-month-picker.outlined {
-            .tnt-form-field-label {
-                background-color: $tnt-color-primary-container;
-            }
-        }
-
-        table {
-            thead {
-                tr {
-                    th {
-                        color: $tnt-color-primary;
-                    }
-                }
-            }
-
-            tbody {
-                tr {
-                    td > div.table-content {
-                        color: $tnt-color-on-primary-container;
-                        @include colorizeTransparent($tnt-color-primary-container, $active:true, $hover:true);
-
-                        &:not(.disabled) {
-                            &.current-date {
-                                color: $tnt-color-primary;
-                                border: 2px solid $tnt-color-primary;
-                            }
-
-                            &.selected {
-                                color: $tnt-color-surface;
-                                background-color: $tnt-color-primary
-                            }
-                        }
-
-                        &.out-of-month, &.disabled {
-                            color: getDisableColor($tnt-color-on-primary-container);
-
-                            &.current-date {
-                                color: getDisableColor($tnt-color-primary);
-                                border: 2px solid getDisableColor($tnt-color-primary);
-                            }
-
-                            &.selected {
-                                background-color: getDisableColor($tnt-color-primary);
-                            }
-                        }
-
-                        &.disabled {
-                            &:hover {
-                                background-color: transparent;
-                            }
-
-                            &:active {
-                                background-color: transparent;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-.tnt-form-field.date-picker {
+﻿.tnt-form-field.date-picker {
     cursor: pointer;
 
     &.disabled {
