--- a/TnTComponents/Styles/style.light.scss
+++ b/TnTComponents/Styles/style.light.scss
@@ -1,2 +1,8 @@
 ﻿@import 'Common/_default_theme.light.scss';
-@import 'style.scss';
+@import 'Components/_body.default_theme.scss';
+@import 'Components/_header.default_theme.scss';
+@import 'Components/_card.default_theme.scss';
+@import 'Components/_sidenav.default_theme.scss';
+@import 'Components/_buttons.default_theme.scss';
+@import 'Components/_stack.default_theme.scss';
+@import 'Components/forms/_form.default_theme.scss';
