Fixed bug with binding

--- a/TnTComponents/Forms/TnTDatePicker.razor
+++ b/TnTComponents/Forms/TnTDatePicker.razor
@@ -9,7 +9,7 @@
                disabled="@Disabled"
                placeholder="@Placeholder"
                readonly="true"
-               @bind="@CurrentValueAsString"
+               @bind="@Value"
                @ref="@InputElement"
                @onfocusin="OnFocusInAsync" />
 
