Fixed style issue

--- a/TnTComponents/Styles/Components/forms/_checkbox.scss
+++ b/TnTComponents/Styles/Components/forms/_checkbox.scss
@@ -137,9 +137,9 @@
                     width: .45rem;
                     height: .9rem;
                     top: .05rem;
-                    left: -.1rem;
                     border-top: 2px solid transparent;
                     border-left: 2px solid transparent;
+                    border-radius: 0;
                     transform: none;
                     transform: rotateZ(37deg);
                     transform-origin: 100% 100%;
