--- a/TnTComponents/Styles/Components/forms/_form.default_theme.scss
+++ b/TnTComponents/Styles/Components/forms/_form.default_theme.scss
@@ -13,5 +13,6 @@
 @import '_datetimepicker.default_theme.scss';
 @import '_dropdown.default_theme.scss';
 @import '_numeric.default_theme.scss';
+@import '_radiogroup.default_theme.scss';
 @import '_switch.default_theme.scss';
 @import '_textbox.default_theme.scss';
