--- a/TnTComponents/Styles/Components/forms/_form.scss
+++ b/TnTComponents/Styles/Components/forms/_form.scss
@@ -17,5 +17,6 @@
 @import '_datetimepicker.scss';
 @import '_dropdown.scss';
 @import '_numeric.scss';
+@import '_radiogroup.scss';
 @import '_switch.scss';
 @import '_textbox.scss';
