--- a/TnTComponents/Styles/Components/forms/_switch.default_theme.scss
+++ b/TnTComponents/Styles/Components/forms/_switch.default_theme.scss
@@ -26,7 +26,7 @@
         }
 
         .tnt-form-field-label {
-            color: $tnt-color-on-surface;
+            color: $tnt-color-on-primary-container;
         }
 
         &.modified.invalid {
@@ -61,11 +61,11 @@
 
     &.disabled {
         i {
-            color: color.adjust($tnt-color-on-surface, $alpha: -.6);
+            color: color.adjust($tnt-color-on-primary-container, $alpha: -.6);
         }
 
         .tnt-form-field-label {
-            color: color.adjust($tnt-color-on-surface, $alpha: -.6);
+            color: color.adjust($tnt-color-on-primary-container, $alpha: -.6);
         }
 
         input[type=checkbox] {
