--- a/TnTComponents/Styles/Components/forms/_radiogroup.scss
+++ b/TnTComponents/Styles/Components/forms/_radiogroup.scss
@@ -23,6 +23,16 @@
             padding: 0.5rem;
         }
 
+        &:before {
+            content: '';
+            position: relative;
+            left: 3rem;
+            width: 1.1rem;
+            height: 1.1rem;
+            background-color: red;
+            border-radius: 100%;
+        }
+
         input[type=radio] {
             opacity: 0;
         }
