Added initail setup for Dialogs

--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Counter.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Counter.razor
@@ -7,12 +7,12 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<TnTComponents.Button.TnTButton Icon="domain"
-                                IconClass="material-icons"
-                                Text="Click me"
-                                OnClick="IncrementCount">
+<TnTButton Icon="domain"
+           IconClass="material-icons"
+           Text="Click me"
+           OnClick="IncrementCount">
 
-</TnTComponents.Button.TnTButton>
+</TnTButton>
 @code {
     private int currentCount = 0;
 
