--- a/TnTComponents.Testing/TnTComponents.Server/Components/_Imports.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using TnTComponents.Server
-@using TnTComponents.Server.Components
+@using global::TnTComponents.Server
+@using global::TnTComponents.Server.Components
