--- a/TnTComponents/Styles/Components/_card.default_theme.scss
+++ b/TnTComponents/Styles/Components/_card.default_theme.scss
@@ -1,4 +1,5 @@
 ﻿.tnt-card[theme=default] {
+    background-color: $tnt-color-surface-variant;
 
     &.flat {
         background-color: $tnt-color-surface-variant;
