--- a/TnTComponents/_Imports.razor
+++ b/TnTComponents/_Imports.razor
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Components.Web
-@using TnTComponents.Common
-@using TnTComponents.Enum;
+@using global::TnTComponents.Common
+@using global::TnTComponents.Enum
+@using global::TnTComponents.Services
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Forms
