--- a/TnTComponents/Styles/Components/_card.scss
+++ b/TnTComponents/Styles/Components/_card.scss
@@ -4,6 +4,8 @@
     width: -moz-fit-content;
     width: fit-content;
     margin: 1rem;
+    display: flex;
+    flex-direction: column;
     @extend .tnt-border-radius-3;
     @extend .tnt-z-depth-3;
 
